basic header, footer and main section added

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,35 @@
                   <button >Sign Up</button>
               </section>
           </section>
+
 	  </header>
 
+      <main>
+          <section id="landingInfo">
+              <img id="landingBackgroundImage" src="https://texashealthheart.files.wordpress.com/2011/10/food.jpg" />
+              <p id="welcomeText">Mealamatician is built for the beginner and seasoned (mind the pun) meal prepper alike. With this simple tool you will be able to work your way through the process of preparing meals that fit your specific needs, without needing to do all the research and math that is normally required. Mealamatician will tailor your portions based on your physical characteristics, activity level, results (i.e. losing, gaining of maintaining body mass) and on your planned meal schedule.</p>
+              <button id="startMealBuilder">Let’s go!!! I’m hungry!</button>
+          </section>
+      </main>
+
+      <footer>
+          <section id="siteMapSection">
+              <nav id="siteMapNav">
+                  <a>Home</a>
+                  <a>Meal Builder</a>
+                  <a>Contact</a>
+                  <a>About Us</a>
+                  <a>Collaboration</a>
+                  <a>Investors</a>
+                  <a>Jobs</a>
+                  <a>Privacy Policy</a>
+              </nav>
+          </section>
+
+          <small>&copy; Copyright 2018<script>new Date().getFullYear() > 2018 && document.write("-" + new Date().getFullYear());</script>, Nick Sugar.</small>
+          <section id="socialMediaSection">
+              <img class="socialMediaIcon" id="githubIcon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/github_six_black-512.png" />
+          </section>
+      </footer>
   </body>
 </html>
