styled footer elements and added hover animation

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
           <small>&copy; Copyright 2018<script>new Date().getFullYear() > 2018 && document.write("-" + new Date().getFullYear());</script>, Nick Sugar.</small>
           <section id="socialMediaSection">
               <img class="socialMediaIcon" id="githubIcon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/github_six_black-512.png" />
+              <img class="socialMediaIcon" id="linkedinIcon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_six_black-512.png" />
+              <img class="socialMediaIcon" id="twitterIcon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_six_black-512.png" />
           </section>
       </footer>
   </body>
