Footer is built, nav links are not all linked up. Also started playing with components and html snippets

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
 
 	  </header>
 
+      <div id="router"></div>
+
       <main>
           <section id="landingInfo">
               <img id="landingBackgroundImage" src="https://texashealthheart.files.wordpress.com/2011/10/food.jpg" />
@@ -75,5 +77,7 @@
               <img class="socialMediaIcon" id="twitterIcon" onclick="window.open('https://twitter.com/nicksugar11')" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_six_black-512.png" />
           </section>
       </footer>
+      
+      <script src="./js/app.js"></script>
   </body>
 </html>
