header components html snippet and ctrl all hooked up

--- a/public/index.html
+++ b/public/index.html
@@ -17,38 +17,17 @@
 
     <link href="./style/main.css" rel="stylesheet" />
 
+    <script src="./js/app.js"></script>
+    <script defer src="./headerComponent/headerCtrl.js"></script>
+
   </head>
   <body>
-	  <header>
 
-          <section id="logoContainer" >
-              <div id="logo">
-                  <img id="logoPlateImage"src="https://image.flaticon.com/icons/svg/26/26852.svg" />
-                  <h1 id="logoAppName">Mealamatician</h1>
-                  <img id="logoScaleImage" src="https://image.flaticon.com/icons/svg/45/45327.svg" />
-              </div>
-          </section>
-          
-          <section id="headerButtonContainer">
-              <nav id="navBar">
-                  <a>Home</a>
-                  <a>Ingredients</a>
-                  <a>Calories</a>
-                  <a>About Us</a>
-                  <a>Contact</a>
-              </nav>
+      <div id="headerContainer" >
+          <script>loadComponent('header', 'headerContainer')</script>
+      </div>
 
-              <section id="signUpIn">
-                  <button >Log In</button>
-                  <button >Sign Up</button>
-              </section>
-          </section>
-
-	  </header>
-
-      <div id="router"></div>
-
-      <main>
+      <main id="router">
           <section id="landingInfo">
               <img id="landingBackgroundImage" src="https://texashealthheart.files.wordpress.com/2011/10/food.jpg" />
               <p id="welcomeText">Mealamatician is built for the beginner and seasoned (mind the pun) meal prepper alike. With this simple tool you will be able to work your way through the process of preparing meals that fit your specific needs, without needing to do all the research and math that is normally required. Mealamatician will tailor your portions based on your physical characteristics, activity level, results (i.e. losing, gaining of maintaining body mass) and on your planned meal schedule.</p>
@@ -78,6 +57,5 @@
           </section>
       </footer>
       
-      <script src="./js/app.js"></script>
   </body>
 </html>
