fixed file tree for calorieCalcComponent and started on landing button

--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,20 @@
     <script defer src="./headerComponent/headerCtrl.js"></script>
     <script defer src="./footerComponent/footerCtrl.js"></script>
     <script defer src="./landingComponent/landingCtrl.js"></script>
+    <script defer src="./calorieCalcComponent/calorieCalcCtrl.js"></script>
 
   </head>
   <body>
 
       <div id="headerContainer" >
+          <!-- Move logic to controler-->
           <script>loadComponent('header', 'headerContainer')</script>
       </div>
 
       <main id="router"></main>
 
       <div id="footerContainer">
+          <!-- Move logic to controler-->
           <script>loadComponent('footer', 'footerContainer')</script>
       </div>
       
