moved app.js to root. working on inport export ctrls to app.js

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
 
     <link href="./style/main.css" rel="stylesheet" />
 
-    <script src="./js/app.js"></script>
+    <script src="./app.js" type="module"></script>
     <script defer src="./headerComponent/headerCtrl.js"></script>
     <script defer src="./footerComponent/footerCtrl.js"></script>
-    <script defer src="./landingComponent/landingCtrl.js"></script>
+    <script defer src="./landingComponent/landingCtrl.js" type="module"></script>
     <script defer src="./calorieCalcComponent/calorieCalcCtrl.js"></script>
 
   </head>
