--- a/public/index.html
+++ b/public/index.html
@@ -18,25 +18,19 @@
     <link href="./style/main.css" rel="stylesheet" />
 
     <script src="./app.js" type="module"></script>
-    <script defer src="./headerComponent/headerCtrl.js"></script>
-    <script defer src="./footerComponent/footerCtrl.js"></script>
-    <script defer src="./landingComponent/landingCtrl.js" type="module"></script>
-    <script defer src="./calorieCalcComponent/calorieCalcCtrl.js"></script>
+    <script src="./headerComponent/headerCtrl.js" type="module"></script>
+    <script src="./footerComponent/footerCtrl.js" type="module"></script>
+    <script src="./landingComponent/landingCtrl.js" type="module"></script>
+    <script src="./calorieCalcComponent/calorieCalcCtrl.js" type="module"></script>
 
   </head>
   <body>
 
-      <div id="headerContainer" >
-          <!-- Move logic to controler-->
-          <script>loadComponent('header', 'headerContainer')</script>
-      </div>
+      <div id="headerContainer"></div>
 
       <main id="router"></main>
 
-      <div id="footerContainer">
-          <!-- Move logic to controler-->
-          <script>loadComponent('footer', 'footerContainer')</script>
-      </div>
+      <div id="footerContainer"></div>
       
   </body>
 </html>
