working on router, the for loop for compairing component names is inop

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link href="./style/main.css" rel="stylesheet" />
 
     <script src="./app.js" type="module"></script>
+    <script src="./router.js" type="module"></script>
     <script src="./headerComponent/headerCtrl.js" type="module"></script>
     <script src="./footerComponent/footerCtrl.js" type="module"></script>
     <script src="./landingComponent/landingCtrl.js" type="module"></script>
