Styled input on known calorie form and added .sass-cache to gitignore

--- a/public/calorieCalcComponent/calorieCalc.html
+++ b/public/calorieCalcComponent/calorieCalc.html
@@ -7,6 +7,7 @@
                 <label for="knownCalorieNum">Desired daily calories</label>
                 <input type="text" name="knowCalorieNum" id="knownCalorieNum" />
             </fieldset>
+	    <button>Next</button>
         </form>
     </section>
 </section>
