add to the calorie from

--- a/public/calorieCalcComponent/calorieCalc.html
+++ b/public/calorieCalcComponent/calorieCalc.html
@@ -2,12 +2,16 @@
 <section id="calorieFormContainer">
     <section id="knownCaloriesFormContainer">
         <form id="knownCaloriesForm">
-            <h1>If you know your daily caloric needs, please enter now.</h1>
             <fieldset>
-                <label for="knownCalorieNum">Desired daily calories</label>
-                <input type="text" name="knowCalorieNum" id="knownCalorieNum" />
+                <legend>How many daily calories do you need?</legend>
+                <label for="knownCalorieNum">Number of calories</label>
+                <input type="number" name="knowCalorieNum" id="knownCalorieNum" />
+                <button type="button">Next</button>
             </fieldset>
-	    <button>Next</button>
+            <h2>Calculate how many calories I need</h2>
+            <fieldset>
+                <legend>Your bod</legend>
+            </fieldset>
         </form>
     </section>
 </section>
