worked on mobile first form. Know calorie num input styled.

--- a/public/calorieCalcComponent/calorieCalc.html
+++ b/public/calorieCalcComponent/calorieCalc.html
@@ -4,8 +4,7 @@
         <form id="knownCaloriesForm">
             <fieldset>
                 <legend>How many daily calories do you need?</legend>
-                <label for="knownCalorieNum">Number of calories</label>
-                <input type="number" name="knowCalorieNum" id="knownCalorieNum" />
+                <input type="number" name="knowCalorieNum" placeholder="Enter Calories" id="knownCalorieNum" />
                 <button type="button">Next</button>
             </fieldset>
             <h2>Calculate how many calories I need</h2>
